--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,65 +1,60 @@
-<ion-menu [content]="contentMenu">
-  <ion-header>
-    <ion-toolbar>
-      <ion-title>Menu</ion-title>
-    </ion-toolbar>
-  </ion-header>
-  <ion-content>
-    <ion-list>
-      <button ion-item (click)="SeleccionarTodas(homePage)" color="primary">
-        Seleccionar Todos los Contactos
-          <ion-icon name="ios-list-box-outline" side="left" ></ion-icon>
-      </button>  
-    </ion-list>
-  </ion-content>
-</ion-menu>
+<ion-header>
 
-
-<ion-header >
-
-  <ion-navbar>
-    <ion-title>Contactos</ion-title>
-  </ion-navbar>
+    <ion-navbar>
+        <ion-title>Contactos <small ng-if="CantidadContactos > 0">({{CantidadContactos}})</small></ion-title>
+    </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding #contentMenu> 
+<ion-content padding #contentMenu>
 
-  <ion-refresher (ionRefresh)="RefrescarPagina($event)">
-    <ion-refresher-content>Se esta refrescando la pagina....</ion-refresher-content>
-  </ion-refresher>
-
-  <h1>Listado de contactos
-    <small ng-if="CantidadContactos > 0">({{CantidadContactos}})</small>
-  </h1>
-  <ion-list>
-    <ion-item-sliding #item *ngFor="let contacto of Contactos">
-      <ion-item>
-        <ion-avatar item-start>
-          <img src="" class="thumbmail">
-        </ion-avatar>
-        <div text-capitalize padding-top>
-          <h2 class="MarginTop5px" text-wrap>{{ contacto.displayName }}</h2>
-          <p *ngFor="let telefono of contacto.phoneNumbers">{{ telefono.value }} - {{ telefono.type }}</p>
-        </div>
-      </ion-item>
-      <ion-item-options side="left">
-        <button ion-button color="danger" (click)="EliminarContacto(contacto,item)">
-          Eliminar
-          <ion-icon name="trash"></ion-icon>
-        </button>
-      </ion-item-options>
-      <ion-item-options side="right">
-        <button ion-button color="default" (click)="CombinarContacto(contacto,item)">
-          Combinar
-          <ion-icon name="md-git-merge"></ion-icon>
-        </button>
-        <button ion-button color="secondary" (click)="MarcarContacto(contacto,item)">
-          Marcar
-          <ion-icon name="ios-checkbox-outline"></ion-icon>
-        </button>
-      </ion-item-options>
-    </ion-item-sliding>
-  </ion-list>
+    <ion-refresher (ionRefresh)="RefrescarPagina($event)">
+        <ion-refresher-content>Se esta refrescando la pagina....</ion-refresher-content>
+    </ion-refresher>
+    <ion-grid>
+        <ion-row>
+            <ion-col col-6>
+                <button ion-button icon-start block round>
+                <ion-icon name="star"></ion-icon>
+                    Left Icon
+                </button>
+            </ion-col>
+            <ion-col col-6>
+                <button ion-button icon-end block round>
+                     Right Icon
+                <ion-icon name="star"></ion-icon>
+              </button>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
+    <ion-list>
+        <ion-item-sliding #item *ngFor="let contacto of Contactos">
+            <ion-item>
+                <ion-avatar item-start>
+                    <img [src]="contacto.photos  | urlSeguro : 'url'" class="thumbmail">
+                </ion-avatar>
+                <div text-capitalize padding-top>
+                    <h2 class="MarginTop5px" text-wrap>{{ contacto.displayName }}</h2>
+                    <p *ngFor="let telefono of contacto.phoneNumbers">{{ telefono.value }} - {{ telefono.type }}</p>
+                </div>
+            </ion-item>
+            <ion-item-options side="left">
+                <button ion-button color="danger" (click)="EliminarContacto(contacto,item)">
+                  Eliminar
+                  <ion-icon name="trash"></ion-icon>
+                </button>
+            </ion-item-options>
+            <ion-item-options side="right">
+                <button ion-button color="default" (click)="CombinarContacto(contacto,item)">
+                    Combinar
+                    <ion-icon name="md-git-merge"></ion-icon>
+                  </button>
+                <button ion-button color="secondary" (click)="MarcarContacto(contacto,item)">
+                    Marcar
+                    <ion-icon name="ios-checkbox-outline"></ion-icon>
+                  </button>
+            </ion-item-options>
+        </ion-item-sliding>
+    </ion-list>
 </ion-content>
