--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -2,8 +2,27 @@
 
     <ion-navbar>
         <ion-title>Contactos <small ng-if="CantidadContactos > 0">({{CantidadContactos}})</small></ion-title>
+        <ion-grid>
+            <ion-row>
+                <ion-col col-6>
+                    <button ion-button icon-start block round>
+                    <ion-icon name="star"></ion-icon>
+                        Procesar
+                    </button>
+                </ion-col>
+                <ion-col col-6>
+                    <button color="secondary" ion-button icon-end block round *ngIf="!esSeleccionarTodos" (click)="SeleccionarTodos(!esSeleccionarTodos);">
+                        Seleccionar
+                        <ion-icon name="star"></ion-icon>
+                    </button>
+                    <button color="danger" ion-button icon-end block round *ngIf="esSeleccionarTodos" (click)="SeleccionarTodos(!esSeleccionarTodos);">
+                        Limpiar
+                        <ion-icon name="star"></ion-icon>
+                    </button>
+                </ion-col>
+            </ion-row>
+        </ion-grid>
     </ion-navbar>
-
 </ion-header>
 
 
@@ -11,28 +30,8 @@
     <ion-refresher (ionRefresh)="RefrescarPagina($event)">
         <ion-refresher-content>Se esta refrescando la pagina....</ion-refresher-content>
     </ion-refresher>
-    <ion-grid>
-        <ion-row>
-            <ion-col col-6>
-                <button ion-button icon-start block round>
-                <ion-icon name="star"></ion-icon>
-                    Procesar
-                </button>
-            </ion-col>
-            <ion-col col-6>
-                <button color="secondary" ion-button icon-end block round *ngIf="!esSeleccionarTodos" (click)="SeleccionarTodos(!esSeleccionarTodos);">
-                     Seleccionar
-                    <ion-icon name="star"></ion-icon>
-                </button>
-                <button color="danger" ion-button icon-end block round *ngIf="esSeleccionarTodos" (click)="SeleccionarTodos(!esSeleccionarTodos);">
-                     Limpiar
-                    <ion-icon name="star"></ion-icon>
-                </button>
-            </ion-col>
-        </ion-row>
-    </ion-grid>
     <ion-list>
-        <ion-item-sliding #item *ngFor="let itemContacto of ContactosDirectorio">
+        <ion-item-sliding #item *ngFor="let itemContacto of ContactosDirectorioScroll">
             <ion-item>
                 <ion-avatar item-start>
                     <img [src]="itemContacto.Contacto.photos  | urlSeguro : 'url'" class="thumbmail">
@@ -71,4 +70,8 @@
             </ion-item-options>
         </ion-item-sliding>
     </ion-list>
+
+    <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+        <ion-infinite-scroll-content></ion-infinite-scroll-content>
+    </ion-infinite-scroll>
 </ion-content>
