--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,9 @@
 <ion-header>
 
     <ion-navbar>
-        <ion-title>Contactos <small ng-if="CantidadContactos > 0">({{CantidadContactos}})</small></ion-title>
+        <ion-title icon-end>Limpiar Contactos: <small ng-if="CantidadContactos > 0">({{CantidadContactos}})</small>
+            <ion-icon name="md-contacts" padding></ion-icon>
+        </ion-title>
         <ion-grid>
             <ion-row>
                 <ion-col col-6>
@@ -27,9 +29,6 @@
 
 
 <ion-content padding #contentMenu>
-    <ion-refresher (ionRefresh)="RefrescarPagina($event)">
-        <ion-refresher-content>Se esta refrescando la pagina....</ion-refresher-content>
-    </ion-refresher>
     <ion-list>
         <ion-item-sliding #item *ngFor="let itemContacto of ContactosDirectorioScroll">
             <ion-item>
@@ -63,10 +62,14 @@
                     Procesar
                     <ion-icon name="md-git-merge"></ion-icon>
                   </button>
-                <button ion-button color="secondary" (click)="MarcarContacto(itemContacto,item)">
-                    Marcar
-                    <ion-icon name="ios-checkbox-outline"></ion-icon>
-                </button>
+                <button ion-button color="secondary" *ngIf="!itemContacto.esSeleccionado" (click)="MarcarContacto(itemContacto,item)">
+                      Marcar
+                      <ion-icon name="ios-checkbox-outline"></ion-icon>
+                  </button>
+                <button ion-button color="danger" *ngIf="itemContacto.esSeleccionado" (click)="DesmarcarContacto(itemContacto,item)">
+                      Desmarcar
+                      <ion-icon name="ios-checkbox-outline"></ion-icon>
+                  </button>
             </ion-item-options>
         </ion-item-sliding>
     </ion-list>
@@ -74,4 +77,7 @@
     <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
         <ion-infinite-scroll-content></ion-infinite-scroll-content>
     </ion-infinite-scroll>
+    <ion-refresher (ionRefresh)="RefrescarPagina($event)">
+        <ion-refresher-content>Se esta refrescando la pagina....</ion-refresher-content>
+    </ion-refresher>
 </ion-content>
