--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -42,19 +42,19 @@
             <ion-grid>
                 <ion-row>
                     <ion-col col-4>
-                        <button ion-button icon-only block class="btn-facebook">
-              <ion-icon name="logo-facebook"></ion-icon>
-            </button>
+                        <button ion-button icon-only block class="btn-facebook" (click)="IngresarConFacebook()">
+                            <ion-icon name="logo-facebook"></ion-icon>
+                        </button>
                     </ion-col>
                     <ion-col col-4>
                         <button ion-button icon-only block class="btn-twitter">
-              <ion-icon name="logo-twitter"></ion-icon>
-            </button>
+                            <ion-icon name="logo-twitter"></ion-icon>
+                        </button>
                     </ion-col>
                     <ion-col col-4>
                         <button ion-button icon-only block class="btn-gplus">
-              <ion-icon name="logo-googleplus"></ion-icon>
-            </button>
+                            <ion-icon name="logo-googleplus"></ion-icon>
+                        </button>
                     </ion-col>
                 </ion-row>
             </ion-grid>
